added function to change the currently displayed city, only adds name and current temp, wind and humidity, also changed weather box styling slightly

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
         <!-- Box that hold rest of main page content -->
         <div class="weather-box">
-            <h2 id="cityName">City Name</h2>
+            <h3 id="cityName">City Name</h3>
             <div class="weather-details">
-                <p>Temp: <span id="temperature">--°C</span></p>
-                <p>Wind: <span id="windSpeed">-- m/s</span></p>
-                <p>Humidity: <span id="humidity">--%</span></p>
+                <p>Temp: <span id="temperature">-- </span>°C</p>
+                <p>Wind: <span id="windSpeed">-- </span>m/s</p>
+                <p>Humidity: <span id="humidity">--</span>%</p>
             </div>
             <h2>5-Day Forecast</h2>
             <div class="forecast">
