added 5 day forcast functionality

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <p>Humidity: <span id="humidity">--</span>%</p>
             </div>
             <h2>5-Day Forecast</h2>
+            <!-- Holds the 5 boxes for 5 day forcast-->
             <div class="forecast">
-                <!-- These are test boxes and will be removed from html later, it will be populated by JS later -->
                 <div class="forecast-box"></div>
                 <div class="forecast-box"></div>
                 <div class="forecast-box"></div>
