--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
             <ul id="searchHistory">
                 <!-- JavaScript will populate this list -->
             </ul>
+            <!-- Button to clear search history -->
+            <button id="clearHistoryButton">Clear History</button>
         </div>
 
         <!-- Box that hold rest of main page content -->
         <div class="weather-box">
-            <h3 id="cityName">City Name</h3>
-            <div class="weather-details">
-                <p>Temp: <span id="temperature">-- </span>°C</p>
-                <p>Wind: <span id="windSpeed">-- </span>m/s</p>
-                <p>Humidity: <span id="humidity">--</span>%</p>
+            <div class="current-weather">
+                <h3 id="cityName">City Name</h3>
+                <div class="weather-details">
+                    <p>Temp: <span id="temperature">-- </span>°C</p>
+                    <p>Wind: <span id="windSpeed">-- </span>m/s</p>
+                    <p>Humidity: <span id="humidity">--</span>%</p>
+                </div>
             </div>
             <h2>5-Day Forecast</h2>
             <!-- Holds the 5 boxes for 5 day forcast-->
